[package]
name = "firestore_signalling"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
matchbox_socket = { path = "../../matchbox_socket" }
matchbox_protocol = { path = "../../matchbox_protocol", default-features = false }

futures-timer = { version = "3", features = ["wasm-bindgen"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "1.16", features = ["v4", "rng-getrandom"] }
web-time = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Url", "UrlSearchParams", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-wasm = "0.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }


